# engineZ

./: AUTHORS  COPYING  ChangeLog  GUIDELINES  INSTALL  NEWS  README  configure.ac
data/: Makefile.am
data/audio/: LICENSE
data/graphics/: AUTHORS
include/: enemy.h  game.h  global.h  menu.h  sdlFunctions.h  sdlInit.h  sprite.h  spriteFunctions.h  user.h
src/: Makefile.am  enemy.cpp  game.cpp  global.cpp  main.cpp  menu.cpp  sdlInit.cpp  sprite.cpp  spriteFunctions.cpp  user.cpp
