TOP_DIR = ../

AM_CPPFLAGS = -I$(TOP_DIR)/include
AM_CPPFLAGS += -DDATADIR=\"$(pkgdatadir)\"

bin_PROGRAMS = engineZ
engineZ_SOURCES = main.cpp \
                 enemy.cpp \
                 game.cpp \
                 global.cpp \
                 menu.cpp \
                 sdlInit.cpp \
                 sprite.cpp \
                 spriteFunctions.cpp \
                 user.cpp
				 

				 
